fix scrollbar in navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,8 +87,8 @@ a{
     top: 0;
     left: 0;
     z-index: 1;
-    overflow-x: hidden;
     transition: 0.5s ease-in-out;
+    overflow: hidden;
 }
 .lien2, .form{
     position: relative;
